--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
 </head>
 
 <body>
+
+
     <div class="header">
-    <h1>Mario's Professional Porfolio</h1>
+         <h1>Mario's Professional Porfolio</h1>
     </div>
-        <div id="wow">
-        <ul>
+    <div id="wow">
+            <ul>
             <li>
-                <a href="#aboutme">About Me</a>
+            <a href="aboutme">About Me</a>
             </li>
             <li>
-                <a href="Github">Git Hub</a>
+            <a href="Github">Git Hub</a>
+            </li>
+            <li>
+            <a href="Contact">Contact Me</a>
             </li>
         </ul>
         </div>
      
-        <img src="mario.JPG" alt="Mario" width="350" height="350" class="center">
+        <img class="center" src="mario2.jpeg" alt="Mario">
       
         <h2>About me</h2>
-        <p>
- My name is Mario Ulloa I come from a social work bacground and Im looking to make a carrer change into Web development. 
+        <p class="about">
+ My name is Mario Ulloa I come from a social work background and Im looking to make a carrer change into Web development. 
 
     </p>
 </div>
