--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <h2>Projects</h2>
         <ul>
             <li><a href="file:///Users/marioulloa/fanpage/index.html"><img class="image3" src="project 1.png" alt="fanpage"></a></li>
-            <li><a href="file:///Users/marioulloa/my-first-website/index.html"><img class="image4" src="panda.png" alt="my-first-website"></a><a href="file:///Users/marioulloa/watch-that-box/index.html"><img class="image5" src="box.png" alt="box"></a></li>
+            <li><a href="file:///Users/marioulloa/my-first-website/index.html"><img class="image4" src="panda.png" alt="my-first-website"></a>
+                <a href="file:///Users/marioulloa/watch-that-box/index.html"><img class="image5" src="box.png" alt="box"></a></li>
         </ul> 
         
     
