--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             </li>
             <li><a href="https://mulloa90.github.io/project-1/"><img class="image6" src="./ADVNTR.png"
                 alt="fanpage"></a></li>
+            <li><a href="https://github.com/kentshaffer/Project-2"><img class="image6" src="./project-2 pic.png"
+                alt="fanpage"></a></li>
         </ul>
 
 
